2010-01-10  Robert Millan  <rmh.grub@aybabtu.com>

	Fix i386-ieee1275 build.

	* loader/i386/ieee1275/linux.c (grub_linux_boot): Use grub_term_width()
	and grub_term_height() for video_{width,height} initialization.

2010-01-10  Robert Millan  <rmh.grub@aybabtu.com>

	Fix grub-emu build.

	* conf/any-emu.rmk (grub_emu_SOURCES): Remove `kern/reader.c'.

2010-01-07  Vladimir Serbinenko  <phcoder@gmail.com>
2010-01-09  Robert Millan  <rmh.grub@aybabtu.com>

	Support for multiple terminals.

	* Makefile.in (pkglib_DATA): terminal.lst.
	(terminal.lst): New target.
	* commands/handler.c (grub_cmd_handler): Don't handle terminals.
	(GRUB_MOD_INIT(handler)): Likewise.
	(GRUB_MOD_FINI(handler)): Likewise.
	* commands/help.c (grub_cmd_help): Handle multiple terminals.
	* commands/keystatus.c (grub_cmd_keystatus): Likewise.
	* commands/sleep.c (do_print): Use grub_term_restore_pos.
	(grub_cmd_sleep): Use grub_term_save_pos.
	* commands/terminal.c: New file.
	* conf/any-emu.rmk (grub_emu_SOURCES): Add normal/term.c
	commands/terminal.c and lib/charset.c.
	* conf/common.rmk (normal_mod_SOURCES): Add normal/term.c.
	(pkglib_MODULES): Add terminal.mod.
	(terminal_mod_SOURCES): New variable.
	(terminal_mod_CFLAGS): Likewise.
	(terminal_mod_LDFLAGS): Likewise.
	* genhandlerlist.sh: Don't handle terminals.
	* genmk.rb: Generate terminal-*.lst.
	* genterminallist.sh: New file.
	* include/grub/charset.h (grub_ucs4_to_utf8_alloc): New proto.
	(grub_is_valid_utf8): Likewise.
	(grub_utf8_to_ucs4_alloc): Likewise.
	* include/grub/menu_viewer.h (grub_menu_viewer): Rewritten.
	(grub_menu_register_viewer): Changed argument.
	(grub_menu_try_text): New proto.
	(grub_gfxmenu_try_hook): New declaration.
	* include/grub/normal.h (grub_normal_exit_level): New declaration.
	(grub_menu_init_page): Additional argument term.
	(grub_normal_init_page): Likewise.
	(grub_cmdline_get): Arguments simplified.
	(grub_utf8_to_ucs4_alloc): Removed.
	(grub_print_ucs4): Additional argument term.